# simple_messenger

./: .clang-format  .gitignore  CMakeLists.txt  CMakeToolchain.cmake  Dockerfile  README.md  docker-compose.yml  dodo.py  help.txt
client_app/: CMakeLists.txt  client_app_main.cpp
client_app/endpoint/: CMakeLists.txt  ClientEndpoint.cpp  ClientEndpoint.hpp  ClientTcpEndpoint.cpp  ClientTcpEndpoint.hpp  ClientUdpEndpoint.hpp  GrpcClient.cpp  GrpcClient.hpp
common/: CMakeLists.txt
common/comm_utils/: CMakeLists.txt  SocketPolling.cpp  SocketPolling.hpp
common/endpoint/: CMakeLists.txt  EndpointBase.cpp  EndpointBase.hpp  TcpEndpointBase.cpp  TcpEndpointBase.hpp  UdpEndpointBase.cpp  UdpEndpointBase.hpp
common/interfaces/: CMakeLists.txt  defines.hpp  grpc_services.proto  msg_itf.hpp  proto_defines.proto
common/logger/: CMakeLists.txt  Logger.hpp
common/message_processor/: CMakeLists.txt  MessageProcessing.cpp  MessageProcessing.hpp  TestMessageProcessing.cpp
common/message_processor/ut/: CMakeLists.txt  TestMessageProcessing.cpp
common/thread_manager/: CMakeLists.txt  ThreadManager.cpp  ThreadManager.hpp
common/utilities/: CMakeLists.txt  CircularBuffer.hpp  CrtpSingleton.hpp  DynamicCrtpSingleton.hpp  StaticCrtpSingleton.hpp
common/utilities/ut/: CMakeLists.txt  TestCircularBuffer.cpp
docker/server/: Dockerfile
server_app/: CMakeLists.txt  server_app_main.cpp
server_app/authentification_service/: AuthentificationService.cpp  AuthentificationService.hpp  CMakeLists.txt
server_app/endpoint/: CMakeLists.txt  GrpcServer.cpp  GrpcServer.hpp  ServerEndpoint.cpp  ServerEndpoint.hpp  ServerTcpEndpoint.cpp  ServerTcpEndpoint.hpp  ServerUdpEndpoint.cpp  ServerUdpEndpoint.hpp
server_app/psql_manager/: CMakeLists.txt  PsqlManager.cpp  PsqlManager.hpp
server_app/server_manager/: CMakeLists.txt  ServerManager.cpp  ServerManager.hpp
tools/: style-formatter.sh
tools/docker/app_build_base/: Dockerfile
tools/docker/client/: Dockerfile
tools/docker/server/: Dockerfile
tools/grpc_setup/: install_grpc.sh  re2.patch
tools/py3/: cmd_shortcuts.py  constants.py  dev_env.py  setup_dev_env.py
tools/sh/: style-formatter.sh
